chore: update start review content

--- a/src/pages/start-review-page/Content.mdx
+++ b/src/pages/start-review-page/Content.mdx
@@ -1,11 +1,11 @@
-پرسشنامه‌هایی که در پیش داریم، فقط ارزیابی شما از خودتونه و سه مرحله داره که هر مرحله حدود ۱۰ دقیقه از شما وقت می‌گیره و نیاز به تمرکز داره:  
+این بخش از مرور عملکرد که در ادامه می‌بینید فقط **Self-Review** هست و سه مرحله داره که برای نوشتن هر کدوم به تمرکز نیاز دارید.
 
 
->**مرحله‌ی ۱:** خودتون رو در ۶ شایستگی ارزیابی کنید. این شایستگی‌ها برگرفته از ارزیابی عملکرد گوگل می‌باشد.  
+>**مرحله‌ی ۱:** خودتون رو در ۶ شایستگی اساسی ارزیابی کنید. (زمان پیش‌بینی شده: ۲۰ دقیقه)
 >
->**مرحله‌ی ۲:** نقاط قوت و ضعفتون رو ذکر می‌کنید.    
+>**مرحله‌ی ۲:** نقاط قوت و ضعفتون رو ذکر کنید. (زمان پیش‌بینی شده: ۱۰ دقیقه)
 >
->**مرحله‌ی ۳:** دستاوردها و افرادی که قراره شما رو بررسی کنند مشخص کنید.    
+>**مرحله‌ی ۳:** به ازای هر پروژه دستاوردهاتون رو بنویسید و افرادی که قراره شما رو بررسی کنند، مشخص کنید. (زمان پیش‌بینی شده به ازای هر پروژه: ۱۵ دقیقه)
 
 
-تکمیل کردن این پرسشنامه‌ها نهایت ۳۰ دقیقه از شما وقت می‌گیره. ممنونت می‌شم وقت بذاری و اونا رو تکمیل کنی. ضمنا می‌تونی هر وقت خواستی بخشی از پرسشنامه‌ها رو ذخیره کنی و بعدا دوباره به تکمیل کردنشون بپردازی.
+تکمیل کردن این پرسشنامه‌ها نهایت ۱ ساعت از شما وقت می‌گیره. ممنون می‌شیم وقت بذاری و اونا رو تکمیل کنی. ضمنا می‌تونی هر وقت خواستی بخشی از فرم‌ها رو ذخیره کنی و بعدا دوباره به تکمیل کردنشون بپردازی.
