--- a/src/pages/criteria-page/OrganizationCultureAdoptionContent.mdx
+++ b/src/pages/criteria-page/OrganizationCultureAdoptionContent.mdx
@@ -1,1 +1,1 @@
-نسبت به المان‌های فرهنگی سازمان چطور هستید؟ مثلاً: همکاری و کار تیمی، مسئولیت پذیری و تعهد به کار و خروجی آن، صداقت و صراحت و احترام، انتقاد پذیری، انعطاف پذیری نسب به تغییر، دغدغه‌مند و مؤثر در پیشرفت سحابی‌ها و سحاب.
+ ‫نسبت به المان‌های فرهنگی سازمان چطور هستید؟ (مثلاً: همکاری و کار تیمی، مسئولیت پذیری و تعهد به کار و خروجی آن، صداقت و صراحت و احترام، انتقاد پذیری، انعطاف پذیری نسب به تغییر، دغدغه‌مند و مؤثر بودن در پیشرفت سحابی‌ها و سحاب)
