chore: remove NVC link in description

--- a/src/pages/criteria-page/DescriptionContent.mdx
+++ b/src/pages/criteria-page/DescriptionContent.mdx
@@ -1,5 +1,2 @@
-import { TextLink } from 'src/shared/text-link';
-
-توی ۶ شایستگی، خودتون رو در ۴ سطح ارزیابی کنید و **شواهدی** که نشان‌دهنده‌ی ارزیابی شما از خودتونه رو به کمک <TextLink to="/guide">راهنمای مدل NVC</TextLink>
-بنویسید.  
+توی ۶ شایستگی، خودتون رو در ۴ سطح ارزیابی کنید و **شواهدی** که نشان‌دهنده‌ی ارزیابی شما از خودتونه رو بنویسید.  
 **(این بخش فقط توسط مدیر مستقیم شما قابل مشاهده است)**
