fix: improve some text

--- a/src/pages/start-review-page/Content.mdx
+++ b/src/pages/start-review-page/Content.mdx
@@ -5,7 +5,7 @@
 >
 >**مرحله‌ی ۲:** نقاط قوت و ضعفتون رو ذکر کنید. (زمان پیش‌بینی شده: ۱۰ دقیقه)
 >
->**مرحله‌ی ۳:** به ازای هر پروژه دستاوردهاتون رو بنویسید و افرادی که قراره شما رو بررسی کنند، مشخص کنید. (زمان پیش‌بینی شده به ازای هر پروژه: ۱۵ دقیقه)
+>**مرحله‌ی ۳:** به ازای هر پروژه دستاوردهاتون رو بنویسید و افرادی که قراره شما رو مرور کنند، مشخص کنید. (زمان پیش‌بینی شده به ازای هر پروژه: ۱۵ دقیقه)
 
 
 تکمیل کردن این پرسشنامه‌ها نهایت ۱ ساعت از شما وقت می‌گیره. ممنون می‌شیم وقت بذاری و اونا رو تکمیل کنی. ضمنا می‌تونی هر وقت خواستی بخشی از فرم‌ها رو ذخیره کنی و بعدا دوباره به تکمیل کردنشون بپردازی.
