chore: add content to FAQ

--- a/src/pages/guide-page/Content.mdx
+++ b/src/pages/guide-page/Content.mdx
@@ -3,6 +3,13 @@
 ###### منظور از انتظاری که ازم میره چیه؟
 همه ما بنا به برداشتی که از خودمون داریم و تجربه و دانشی که توی حوزه کاری‌مون داریم، سطحی از انتظارات توی سازمان و تیم شکل دادیم و سازمان و تیم انتظار داره که حداقل به اون انتظارات پاسخگو باشیم. حالا بنا به تمرکزمون توی هر دوره از مسیر حرفه‌ای‌مون ممکنه ارزیابی خودمون یا اطرافیان‌مون از عملکردمون توی اون شایستگی متغیر باشه. اما منظور از حد انتظار جمع‌بندی همه‌ی انتظاراتیه که ازمون میره و کاملا وابسته به میزان دانش، تجربه و سابقه‌مون داره.
 ###### منظور از شواهد چیه؟
-نکته نوشتن شواهد اینه که سعی کنیم تا حد ممکن عینی، دور از قضاوت و احساسات باشه. یعنی اگه میگیم توی فلان ویژگی یا شایستگی کمتر از انتظاری که ازم میره عمل کرده‌م، سعی کنم دقیق اشاره کنم که چه کارهایی قرار بوده انجام بدم و انجام نداده‌م یا اگه چه کاری انجام می‌شد از خودم راضی می‌بودم و فکر می‌کردم انتظارات اطرافیانم رو توی تیم یا سازمان برآورده کردم.
+شواهد، رفتار معمول و رایج شماست. فقط سعی کنید تا حد ممکن عینی، دور از قضاوت و احساسات باشه. یعنی اگه میگیم توی فلان ویژگی یا شایستگی کمتر از انتظاری که ازم میره عمل کردم، سعی کنم دقیق اشاره کنم که چه کارهایی قرار بوده انجام بدم که انجام ندادم یا اگه چه کاری انجام می‌شد از خودم راضی می‌بودم و فکر می‌کردم انتظارات اطرافیانم رو توی تیم یا سازمان برآورده کردم.
+فقط دفت کنید که تو فاز Peer-review مرور کننده‌ها این شواهد رو میبینن و بهتره اون‌هارو توجیه کنه.
 ###### منظور از مرجعیت تخصصی همون خفانت فنیه؟
 نه! منظور از مرجیعت تخصصی اینه که محل رجوع دیگران توی حوزه‌ی دانشی خاصی باشی. برای رسیدن به این مهم و رشد این شایستگی، لازمه که احتمالا یک یا چند حوزه تخصصی رو به عنوان حوزه‌ی مورد علاقه خودمون انتخاب کرده باشیم و توی اون حوزه به تسلط لازم رسیده باشیم و ... اما اون چیزی که اینجا برامون مهمه نتیجه‌ی این فراینده. به این معنی که آیا تونستیم توی حداقل یه حوزه تخصصی اونقدر شناخته شده باشیم که محل مراجعه سایرین و پیشبرد حل مسائل تخصصی هم تیمی‌هامون یا سایر تیم‌ها باشیم؟
+###### منظور از ویژگی های بارز چیه؟
+توی این بخش خودتون رو محدود نکنید و سعی کنید موضوع رو جامع ببینید. یعنی نقطه قوت یا ضعفی رو پیدا کنید که به صورت اساسی بتونه رشدتون بده. این ویژگی بارز می‌تونه یه شایستگی، نگرش، توانایی بین فردی یا توانایی فنی باشه. مثلاً احساسی عمل کردن در تنش‌ها یا نداشتن دانش کافی در مورد multi-threading هردو می‌تونن یه ویژگی باشن که نیاز به بهبود داره. یا نترس بودن و سریع یادگرفتن می‌تونن ویژگی‌های خوبی باشن که باید ادامه‌شون بدم.
+###### چه افرادی می‌تونن مرورمون کنن؟
+همه افرادی که توی اون پروژه باهاشون ارتباط مؤثری داشتی، میتونن به عنوان مرور کننده انتخاب بشن. اگه این ارتباط بین دو تیم مختلف باشه -یعنی چند نفر از چند تیم توی پروژه باهم مشارکت داشتن- هم میتونن انتخاب بشن. فقط و فقط توجه کنید با توجه به اینکه بعضی SVPها در بعضی تیم‌ها نیستن، SVP تیم نمیتونه جزء مرورکننده‌ها انتخاب بشه مگر اینکه مدیر مستقیم همون تیم هم باشه! مثلاً حامد جمالیفر میتونه مرور کننده اعضای تیم مدیریت محصول باشه ولی برای تیم اعضای تیم البرز، نه.
+###### حداکثر چند نفر رو برای Peer-Review میتونیم انتخاب کنیم؟
+به ازای هر پروژه حداکثر ۶ نفر رو با هماهنگی TPM انتخاب کنید.
