--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -208,24 +208,6 @@ msgstr "در حد انتظاری که ازش میره"
 msgid "Meets Expectations from me"
 msgstr "در حد انتظاری که از من میره"
 
-#: src/pages/manager-review-page/DominantCharacteristics.tsx:15
-#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:48
-msgid "Most important characteristics or behaviours I should improve in myself"
-msgstr "مهمترین ویژگی‌ها یا رفتارهایی که باید توی خودم بهبود بدم"
-
-#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:49
-msgid "Most important characteristics or behaviours he/she should improve in myself"
-msgstr "مهمترین ویژگی‌ها یا رفتارهایی که باید خودش را بهبود بدهد"
-
-#: src/pages/manager-review-page/DominantCharacteristics.tsx:12
-#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:39
-msgid "Most important characteristics or effective behaviours that I should maintain"
-msgstr "مهمترین ویژگی ها یا رفتارهای مؤثری که باید ادامه شون بدم"
-
-#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:40
-msgid "Most important characteristics or effective behaviours that he/she should maintain"
-msgstr "مهمترین ویژگی ها یا رفتارهای مؤثری که باید ادامه شون بدهد"
-
 #: src/pages/projects-page/ProjectForm.tsx:64
 msgid "My impact"
 msgstr "تأثیر من"
@@ -378,6 +360,24 @@ msgstr "با موفقیت ثبت گردید."
 #: src/global-types/Evaluation.ts:19
 msgid "Superb"
 msgstr "فوق‌العاده"
+
+#: src/pages/manager-review-page/DominantCharacteristics.tsx:15
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:48
+msgid "The most important characteristics or behaviours I should improve in myself"
+msgstr "مهمترین ویژگی‌ها یا رفتارهایی که باید توی خودم بهبود بدم"
+
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:49
+msgid "The most important characteristics or behaviours he/she should"
+msgstr "مهمترین ویژگی‌ها یا رفتارهایی که باید خودش را بهبود بدهد"
+
+#: src/pages/manager-review-page/DominantCharacteristics.tsx:12
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:39
+msgid "The most important characteristics or effective behaviours that I should maintain"
+msgstr "مهمترین ویژگی ها یا رفتارهای مؤثری که باید ادامه شون بدم"
+
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:40
+msgid "The most important characteristics or effective behaviours that he/she should maintain"
+msgstr "مهمترین ویژگی ها یا رفتارهای مؤثری که باید ادامه شون بدهد"
 
 #: src/pages/criteria-page/CriteriaForm.tsx:57
 #: src/shared/criteria-manager-review/CriteriaManagerReview.tsx:20
