--- a/src/pages/criteria-page/help-texts/peer-review/LeadershipContent.mdx
+++ b/src/pages/criteria-page/help-texts/peer-review/LeadershipContent.mdx
@@ -1,1 +1,1 @@
-چقدر اهل بر عهده گرفتن مسئولیت کارهای مهم و هدایت و راهبری آن‌ها در تیم و پذیرفتن نتایج اونه (مطلوب یا نا مطلوب)؟
+چقدر اهل به عهده گرفتن مسئولیت کارهای مهم و هدایت و راهبری اون‌ها در تیم و پذیرفتن نتایجشونه؟ (مطلوب یا نا مطلوب)
