--- a/src/pages/project-comment-page/Guide.mdx
+++ b/src/pages/project-comment-page/Guide.mdx
@@ -1,1 +1,3 @@
-اطلاعات ارزیابی عملکرد و دستاوردهای هر پروژه، توسط مدیر مستقیم و کسانیکه شما به عنوان بررسی‌کننده‌ی آن پروژه مشخص می‌کنید؛ دیده می‌شوند.
+import { Username } from 'src/pages/criteria-page/Username';
+
+حتماً اول ارزیابی **<Username/>** از خودش رو بخون و اگه ارزیابی دیگه‌ای داری، دلیل این ارزیابی رو در قالب مشاهده‌هایی که داشتی برای دوستت بنویس.
