--- a/src/pages/criteria-page/help-texts/peer-review/DescriptionContent.mdx
+++ b/src/pages/criteria-page/help-texts/peer-review/DescriptionContent.mdx
@@ -1,3 +1,3 @@
 import { Username } from 'src/pages/criteria-page/Username';
 
-توی این بخش قراره توی ۶ شایستگی به **<Username/>** رتبه بدید و شواهدی که مؤید رتبه‌ی مد نظرتون هست رو بنویسید.
+ **<Username/>** رو در این  ۶ شایستگی ارزیابی کن و شواهدی که مؤید این ارزیابیه رو طوری بنویس که براش واضح، قابل فهم و مفید باشه.
