--- a/src/pages/criteria-page/help-texts/peer-review/ThoughtLeadershipContent.mdx
+++ b/src/pages/criteria-page/help-texts/peer-review/ThoughtLeadershipContent.mdx
@@ -1,1 +1,1 @@
-چقدر در حوزه‌ی مربوط بهش به عنوان یک متخصص بهش رجوع می‌کنید؟ چقدر دیگران برای کمک می‌گیرن؟ چقدر در مورد ابزارهایی که بهش تسلط داره ، ازش سوال می‌پرسن؟
+چقدر در حوزه‌‌ای که در اون تخصص داره، بهش رجوع می‌کنن؟ چقدر دیگران ازش کمک می‌گیرن؟ چقدر در مورد ابزارها یا زبان‌هایی که تسلط داره، ازش سوال می‌پرسن؟
