--- a/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
@@ -1,3 +1,3 @@
 import { Username } from 'src/pages/criteria-page/Username';
 
-**<Username/>** در یک سال گذشته کدام رفتارها یا ویژگی‌ها رو باید **ادامه بده** و کدام رفتارها رو باید **اصلاح بکنه**.
+بنظرت **<Username/>** کدوم ویژگی‌ها یا رفتارهاش رو باید ادامه بده و چه رفتارهایی رو باید اصلاح کنه؟
