--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -480,5 +480,5 @@ msgid "{name}'s comment about his/her performance compared to initial expectatio
 msgstr "نظر {name} در مورد سطح عملکردش نسبت به انتظاری که ازش میره"
 
 #: src/pages/peer-review-page/PersonInfoCard.tsx:38
-msgid "{name}'s evaluation has been ended successfully."
+msgid "{name}'s evaluation completed successfully."
 msgstr "ارزیابی {name} با موفقیت تمام شد."
