chore: update PeerStartReviewContent

--- a/src/pages/start-review-page/PeerStartReviewContent.mdx
+++ b/src/pages/start-review-page/PeerStartReviewContent.mdx
@@ -1,2 +1,13 @@
-شما یکی از ۱۳۰ نفر خوشبختی هستی که به مرحله‌ی دوم ارزیابی عملکرد راه یافتی سختی این مرحله برای افراد مختلف، متفاوته و با افرادی که به شما درخواست مرور عملکرد دادن هم نسبت مستقیم داره!  
-برای همین یک هفته وقت اختصاص دادیم تا اگه مرحله‌ی سختی رو در پیش داری، بتونی با تمرکز کافی، طی چند روز، این مرحله رو پشت سر بگذرونی. تو این مرحله قراره که دوستانت رو در سه بخش شایستگی‌های عملکردی، ویژگی‌های بارز و دستاوردها ارزیابی کنی و به اون‌ها کمک کنی تا دید درست‌تر و دقیق‌تری نسبت به عملکردشون تو این یک سال، پیدا کنن.
+لطفا این نکات رو در نظر داشته باش:
+
+<br />
+
+۱) باتوجه به اهمیت بازخوردها برای همکارات، لطفا وقت و حوصله‌ی کافی رو در این ارزیابی اختصاص بده.
+
+۲) باتوجه به امکان ویرایش ارزیابی، می‌تونی طی چند روز، مشاهداتت رو کامل و غنی‌‌ کنی تا همکارت ارزیابی دقیق‌تری داشته باشه.
+
+۳) برای نوشتن “مشاهده”، پیشنهاد می‌کنم اول، راهنمای ارتباط بدون خشونت یا NVC موجود در سامانه رو مطالعه کنی و برای بازخورددادن به همکارت ازش استفاده کن.
+
+<br />
+
+با سپاس
