fix: update self-reveiw descriptions

--- a/src/pages/criteria-page/help-texts/self-review/DescriptionContent.mdx
+++ b/src/pages/criteria-page/help-texts/self-review/DescriptionContent.mdx
@@ -1,2 +1,3 @@
-توی ۶ شایستگی، خودتون رو در ۴ سطح ارزیابی کنید و **شواهدی** که نشان‌دهنده‌ی ارزیابی شما از خودتونه رو بنویسید.  
-**(این بخش فقط توسط مدیر مستقیم شما قابل مشاهده است)**
+خودتون رو توی ۶ شایستگی زیر و در ۴ سطح ارزیابی کنید و برای هر شایستگی، **یکی دو مثال از رفتار خودتون به عنوان شاهدی** بر ارزیابی‌تون ارائه بدید. منظور از «انتظاری که از من میره»، **برداشت شما از انتظاریه که دیگران (تیم و سازمان) از شما دارند.**
+
+اطلاعاتی که در این بخش وارد می‌کنید _فقط_ توسط مدیر مستقیم شما قابل مشاهده خواهد بود.
