--- a/src/pages/strengths-weaknesses-page/DescriptionContentSelfReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentSelfReview.mdx
@@ -1,3 +1,5 @@
-توی یک سال گذشته هر کدوم از ما ویژگی‌های مفید و مثبتی از خودمون نشون دادیم که احتمالاً نقاط قوت رفتاری‌مون هستن و علاقه‌مندیم این رفتارها یا ویژگی‌ها رو **ادامه بدیم و تقویت کنیم**. از طرفی رفتارهایی داشتیم که شاید با نگاه به گذشته و اثراتشون، پی به این ببریم که باید این رفتارها رو کنار بذاریم.  
-توی این بخش حداکثر ۳ تا از مهمترین ویژگی‌ها یا رفتارها رو برای هردو بخش ذکر کنید.  
-**(این بخش فقط توسط مدیر مستقیم شما قابل مشاهده است.)**
+همهٔ ما شایستگی‌ها، نگرش‌ها و توانایی‌هایی داریم که می‌دونیم از نقاط قوت رفتاریمون هستند و در نظر داریم که بهشون ادامه بدیم و تقویتشون کنیم. از طرف دیگه، رفتارهایی هم داریم که می‌دونیم جای کار دارن و دوست داریم در آیندهٔ نزدیک روی بهبود اون‌ها متمرکز شیم.
+
+توی این بخش حداکثر ۳ تا از مهم‌ترین ویژگی‌ها یا رفتارها رو برای هر دو بخش ذکر کنید.
+
+اطلاعاتی که در این بخش وارد می‌کنید _فقط_ توسط مدیر مستقیم شما قابل مشاهده خواهد بود.
