--- a/src/shared/criteria-help-text/help-texts/self-review/ExecutionContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/self-review/ExecutionContent.mdx
@@ -1,1 +1,1 @@
-کیفیت کارتون چطوره؟ برنامه و زمانبندی‌ها‌تون چطور؟ سرعت، دقت، نظم و تمرکز کافی رو در انجام کارهاتون دارید؟ اهل مستندسازی و مدیریت دانش‌هستید؟ آیا به خروجی مورد انتظار می‌رسید؟
+خروجی‌هایی که ارائه می‌دین، چقدر با کیفیت و با راهنمایی کمینه از طرف همکاران و مدیر شما هستن؟
