--- a/src/shared/criteria-help-text/help-texts/self-review/LeadershipContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/self-review/LeadershipContent.mdx
@@ -1,1 +1,1 @@
-چقدر اهل بر عهده گرفتن مسئولیت کارهای مهم و هدایت و راهبری آن‌ها در تیم  و پذیرفتن نتایج آن (مطلوب یا نا مطلوب) هستید؟
+چقدر نسبت به مسائل محصول و تیم و سازمان حساسیت نشون میدین، به صورت فعالانه مسئولیت راهبری حل اون‌ها رو برعهده می‌‌گیرید و در نهایت نتایجش رو می‌پذیرید؟
