--- a/src/shared/criteria-help-text/help-texts/self-review/PresenceContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/self-review/PresenceContent.mdx
@@ -1,1 +1,1 @@
-چقدر مهارت شنیده‌شدن دارید و با ارتباط کلامی واضح، منسجم و دقیق حضور مؤثری دارید؟
+مهارت شنیده‌شدن خودتون رو چگونه ارزیابی می‌کنید و چقدر حضور موثری در تیم و سازمان دارید؟
