--- a/src/shared/criteria-help-text/help-texts/self-review/ProblemSolvingContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/self-review/ProblemSolvingContent.mdx
@@ -1,1 +1,1 @@
-در مواجهه با مسائل جدید چطور عمل می‌‎کنید؟ (مثلاً: تحقیق و تعریف درست مسئله، تفکر خلاق، بررسی راه‌حل‌های جایگزین و ارائه راه‌حل قابل اجرا و سپس تصمیم‌گیری)
+مهارت حل مسئلهٔ خودتون رو چگونه ارزیابی می‌کنید؟ (مثل تحقیق و تعریف درست مسئله، تفکر خلاق، بررسی راه‌حل‌های جایگزین، ارائه راه‌حل قابل اجرا و تصمیم‌گیری)
