--- a/src/shared/criteria-help-text/help-texts/self-review/ThoughtLeadershipContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/self-review/ThoughtLeadershipContent.mdx
@@ -1,1 +1,1 @@
-چقدر در حوزه‌ی مربوط به خودتون به عنوان یک متخصص به شما رجوع میشه؟ چقدر دیگران برای به‌‌دست‌آوردن دانش به‌روز از شما کمک می‌گیرند؟ چقدر در مورد ابزارهایی که تسلط دارید، از شما سوال می‌پرسند؟
+در حال حاضر، دیگران چقدر در حوزهٔ مربوط به خودتون و برای به دست‌آوردن دانش به‌روز، به شما به عنوان یک متخصص رجوع می‌کنند؟
