--- a/src/pages/projects-page/DescriptionContent.mdx
+++ b/src/pages/projects-page/DescriptionContent.mdx
@@ -1,1 +1,3 @@
-اطلاعات ارزیابی عملکرد و دستاوردهای هر پروژه، توسط مدیر مستقیم و کسانیکه شما به عنوان مرورکننده‌ی آن پروژه مشخص می‌کنید؛ دیده می‌شوند.
+در این بخش تمرکز روی **خروجی‌ها**ست و باید خروجی‌ها و دستاوردهایی که در پیش‌برد پروژه‌های مختلف داشتی رو ذکر کنید. به عنوان مثال این خروجی‌ها می‌تونن نتایج کلیدی شما در دورهٔ اخیر باشن.
+
+مرورکنندگانی که برای هر پروژه مشخص می‌کنید، ارزیابی شما رو برای اون پروژه در فاز بعدی می‌خونن و روش نظر می‌دن. همچنین این افراد «شایستگی‌های رفتاری» و «ویژگی‌های بارز» شما رو از نگاه خودشون (و بدون خوندن نوشته‌های شما) ارزیابی می‌کنند. مرورکنندگان هر پروژه رو حتما با هماهنگی مدیر مستقیم خودتون انتخاب کنید.
