--- a/src/shared/criteria-help-text/help-texts/self-review/OrganizationCultureAdoptionContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/self-review/OrganizationCultureAdoptionContent.mdx
@@ -1,1 +1,1 @@
- ‫نسبت به المان‌های فرهنگی سازمان چطور هستید؟ (مثلاً: همکاری و کار تیمی، مسئولیت پذیری و تعهد به کار و خروجی آن، صداقت و صراحت و احترام، انتقاد پذیری، انعطاف پذیری نسب به تغییر، دغدغه‌مند و مؤثر بودن در پیشرفت سحابی‌ها و سحاب)
+ارزش‌های سحاب چقدر در شما درونی شده و چقدر در رفتارتون دیده میشه؟ (مثل رفتار سهام‌دارانه، صداقت و صراحت و احترام، ارتباطات بی‌واسطه، همکاری و کار تیمی، انعطاف‌پذیری نسبت به تغییر)
